syntax = "proto3";

package bytes;

message Test {
    bytes data = 1;
    repeated bytes rp_data = 2;
}